<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logoo"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#13b586"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="90dp"
                android:layout_weight="0.47"
                android:text="@string/details_title"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/details_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/my_drawables"
                android:hint="@string/details_name"
                android:paddingLeft="5dp"
                android:textColor="#20B2AA"
                android:textColorHint="#ff0000"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/details_email_edit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/my_drawables"
                android:hint="@string/details_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@null"
                android:textColor="#20B2AA"
                android:textColorHint="#ff0000" />

            <EditText
                android:id="@+id/details_phone_edit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/my_drawables"
                android:hint="@string/details_phone"
                android:inputType="phone"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@null"
                android:textColor="#20B2AA"
                android:textColorHint="#ff0000" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/Save"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:background="#13b586"
                android:onClick="resturant"
                android:text="@string/login_button"
                android:textColor="#fff"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>