<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#13b586"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="130dp"
                android:text="@string/login_title"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="201dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_weight="0.29"
                android:background="@drawable/logoo" />

            <EditText
                android:id="@+id/username_edit"
                android:textCursorDrawable="@null"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="#f3f3f3"                
                android:hint="@string/login_username"
                android:textColorHint="#ff0000"
                android:paddingLeft="5dp"
                android:textColor="#20B2AA" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="fill_parent"
                android:textCursorDrawable="@null"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textColorHint="#ff0000"
                android:paddingLeft="5dp"
                android:textColor="#20B2AA" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="#13b586"
                android:text="@string/submit_button"
                android:textColor="#fff"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>